--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -44,7 +44,7 @@ border-color: wheat;
                     display: flex;
                     gap: 15px;
                     padding: 5px;
-                    border: 0.5px solid #000000;
+                    // border: 0.5px solid #000000;
                     transition: 0.8s;
                     border-radius: 8px;
                     border-color: rgb(0, 0, 0);
